Fixed bug where grid would overlap as well as added the ability to color new grid sizes as well, cleaned up some code as well as made the final touches on my style

--- a/style.css
+++ b/style.css
@@ -9,9 +9,13 @@ body {
     justify-content: center;
     align-items: center;
     font-family: fantasy;
-    background-color: #034666;
+    background-color: #dfe6e9;
     margin: 0;
-}  
+}
+.title {
+    font-size: 1.5rem;
+    text-align: center;
+}
 
 #container-wrapper {
     height: var(--grid-rows);
@@ -24,6 +28,8 @@ body {
     width: 575px;
     margin-left: auto;
     margin-right: auto;
+    border: 1px solid;
+    box-shadow: 5px 10px 8px 10px #888888;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
 }
@@ -41,16 +47,11 @@ body {
     gap: 10px;   
 }
 
-input[type='color'] {
-    width: 80px;
-    height: 80px;
-    border: none;
-}
-
 button, input {
     width: 10rem;
     border: none;
     color: inherit;
+    background-color: #1091f4;
     font-family: inherit;
     font-size: 24px;
     cursor: pointer;
@@ -59,4 +60,7 @@ button, input {
 
 button {
     padding: 10px;
+}
+button:hover {
+    background-color: #1380d3;
 }
